better implementation of WATCH_NEXT